[gd_scene load_steps=18 format=3 uid="uid://dd2twf35woli5"]

[ext_resource type="Script" path="res://Scripts/Stream/videoCustomizer.gd" id="1_2n6c5"]
[ext_resource type="Texture2D" uid="uid://u8vlrpwby25x" path="res://Assets/Sprites/Streamers/StreamUI1.png" id="2_tw5sx"]
[ext_resource type="Theme" uid="uid://bciinuu1msc6n" path="res://Assets/Themes/MainMenuUI.tres" id="3_6olq0"]
[ext_resource type="Texture2D" uid="uid://dclv4yduo7t6r" path="res://Assets/Sprites/Streamers/StreamUI2.png" id="3_b6qjb"]
[ext_resource type="Texture2D" uid="uid://daax7vs46y5r5" path="res://Assets/Sprites/Streamers/StreamUI3.png" id="4_4doch"]
[ext_resource type="PackedScene" uid="uid://cbe1ttdb8mw80" path="res://Scenes/Stream/startVideo.tscn" id="4_8g86c"]
[ext_resource type="Texture2D" uid="uid://da2i33j1u8aoa" path="res://Assets/Sprites/Streamers/StreamUI4.png" id="5_gmkmm"]
[ext_resource type="Texture2D" uid="uid://dqdgw8i4qsq0n" path="res://Assets/Sprites/Streamers/VideoFrame.png" id="5_lcra2"]
[ext_resource type="Texture2D" uid="uid://b4fwb25qusipi" path="res://Assets/Sprites/Streamers/StreamUI5.png" id="6_ao40n"]
[ext_resource type="Texture2D" uid="uid://b620dlxfevx5c" path="res://Assets/Sprites/FX/PausePlay.png" id="6_vin5u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_apoy8"]
atlas = ExtResource("6_vin5u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tprjx"]
atlas = ExtResource("6_vin5u")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_av3n2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apoy8")
}],
"loop": true,
"name": &"pause",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tprjx")
}],
"loop": true,
"name": &"play",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5ibr3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Widget:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Widget:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d4s8t"]
resource_name = "pause"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Widget:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"pause"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Widget:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_15s7l"]
resource_name = "play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Widget:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"play"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Widget:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o6uh5"]
_data = {
"RESET": SubResource("Animation_5ibr3"),
"pause": SubResource("Animation_d4s8t"),
"play": SubResource("Animation_15s7l")
}

[node name="VideoFrame" type="Node2D"]
script = ExtResource("1_2n6c5")
streamBorders = Array[Texture]([ExtResource("2_tw5sx"), ExtResource("3_b6qjb"), ExtResource("4_4doch"), ExtResource("5_gmkmm"), ExtResource("6_ao40n")])

[node name="Content" type="Node2D" parent="."]
z_index = -1
position = Vector2(24, 24)
scale = Vector2(0.590614, 0.590614)

[node name="StartVideo" parent="Content" instance=ExtResource("4_8g86c")]
position = Vector2(-40.6357, -40.6357)

[node name="VideoBackground" type="Polygon2D" parent="."]
z_index = -2
color = Color(0.0807833, 0.0807833, 0.0807833, 1)
polygon = PackedVector2Array(704, 24, 704, 504, 792, 504, 792, 8, 8, 8, 8, 24)

[node name="VideoBackground2" type="Polygon2D" parent="."]
color = Color(0.0784314, 0.0784314, 0.0784314, 1)
polygon = PackedVector2Array(704, 408, 704, 504, 0, 504, 0, 8, 24, 8, 24, 408)

[node name="TimelineBackground" type="Polygon2D" parent="."]
color = Color(0.0475577, 0.0475577, 0.0475576, 1)
polygon = PackedVector2Array(24, 408, 704, 408, 704, 424, 24, 424)

[node name="TimelineProgress" type="Polygon2D" parent="."]
position = Vector2(24, 416)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, -8, 680, -8, 680, 8, 0, 8)

[node name="VideoFrame" type="NinePatchRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
offset_left = 24.0
offset_top = 24.0
offset_right = 704.0
offset_bottom = 424.0
texture = ExtResource("5_lcra2")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Background" type="Polygon2D" parent="."]
z_index = -2
color = Color(0.792157, 0.792157, 0.792157, 1)
polygon = PackedVector2Array(0, 648, 0, 512, 800, 512, 800, 0, 1152, 0, 1152, 648)

[node name="StreamBorder" type="NinePatchRect" parent="."]
offset_right = 216.0
offset_bottom = 160.0
scale = Vector2(4, 4)
texture = ExtResource("5_gmkmm")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 23
patch_margin_top = 15
patch_margin_right = 39
patch_margin_bottom = 47

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 16.0
offset_top = 424.0
offset_right = 720.0
offset_bottom = 507.0
theme = ExtResource("3_6olq0")
theme_override_font_sizes/normal_font_size = 48
text = "[Video title here] dasd dasd d asd wdasd dsdwasd asdwa dasd wadwdasd dsdwd awdwdsdsd ww das"
scroll_active = false
autowrap_mode = 2

[node name="Time" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="Widget" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(336, 224)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_av3n2")
autoplay = "pause"

[node name="PausePlay" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o6uh5")
}
autoplay = "RESET"
